# sf-knowledge-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: knowledge.yml
exports/sf-apex/: apex-enhancements.md
knowledge/: __init__.py  cli.py
knowledge/chunker/: __init__.py  semantic_chunker.py
knowledge/embedder/: __init__.py  embedding_client.py
knowledge/export/: __init__.py  markdown_generator.py
knowledge/export/templates/: skill-reference.md
knowledge/ingester/: __init__.py  pdf_extractor.py
knowledge/query/: __init__.py  rag_engine.py
knowledge/storage/: __init__.py  schema.sql  vector_store.py
